# kickoff-demo

./: README.md  log-config.yaml  pyproject.toml
src/: auth.py  config.py  database.py  exception_handler.py  exceptions.py  main.py  middlewares.py  stores.py  utils.py
src/api/: projects.py  users.py
src/dto/: objects.py  requests.py  responses.py
src/entities/: document.py
